# waffle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  test.sh
.github/workflows/: main.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: differential.rs  irreducible.rs  opt_diff.rs  parse_ir.rs  roundtrip.rs  roundtrip_roundtrip.rs  straightline_differential.rs
scripts/: check.sh  reduce-predicate.sh
src/: backend.rs  dataflow.rs  entity.rs  errors.rs  frontend.rs  fuzzing.rs  interp.rs  ir.rs  lib.rs  localssa.rs  op_traits.rs  ops.rs  passes.rs  pool.rs  scoped_map.rs  use_count.rs
src/analysis/: liveness.rs  mod.rs
src/backend/: binaryen.rs  final.rs  localify.rs  location.rs  locations.rs  lower.rs  mod.rs  reducify.rs  schedule.rs  serialize.rs  stackify.rs  structured.rs  treeify.rs  use_count.rs
src/cfg/: domtree.rs  mod.rs  postorder.rs  serialize.rs  structured.rs
src/interp/: wasi.rs
src/ir/: debug.rs  display.rs  func.rs  module.rs  value.rs
src/pass/: dataflow.rs  lattice.rs  mod.rs
src/passes/: basic_opt.rs  dom_pass.rs  empty_blocks.rs  maxssa.rs  remove_phis.rs  reorder_funs.rs  resolve_aliases.rs  rpo.rs  ssa.rs  trace.rs
tests/: roundtrip.rs
tests/roundtrip/: README.md  non-nullable-funcrefs.wat  test.wat  test2.wat
wasm_tests/: ref-null.wat  test-simd.wat  test3.wat  test4.wat  typed-funcref.wat
