[package]
name = "waffle"
version = "0.0.4"
description = "Wasm Analysis Framework For Lightweight Experiments"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"

[dependencies]
wasmparser = "0.95"
wasm-encoder = "0.20"
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
fxhash = "0.2"
smallvec = "1.7"
rayon = "1.5"
lazy_static = "1.4"
libc = "0.2"
addr2line = "0.19"
